--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <div class="card flext-md-row mb-4 shadow-lg h-md-250">
                 <h1 class="box_style" style="padding-left: 15px; padding-bottom:10px; padding-top: 10px">Summary: Latitude vs. X</h1>
                   <div class="thumbnail float-left pr-3" style="padding-top: 35px">
-                      <a href="assets/Fig1.png" target="_blank">
-                        <img style="padding: 0 45px; float: left" src="assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="450px"></a>
+                      <a href="Assets/Fig1.png" target="_blank">
+                        <img style="padding: 0 45px; float: left" src="Assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="450px"></a>
                           <p style="padding-left:25px; font-size:16px; line-height: 30px; word-spacing: 3px; color:rgb(53, 52, 52)">The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the 
                             OpenWeatherMap API to assemble a dataset on over 500 cities.
                             <br><br>
@@ -75,13 +75,13 @@
                 <h1 class="box_style" style="padding-left: 15px; padding-bottom:10px; padding-top: 10px">Visualizations</h1>
                 <div class="thumbnail float-left pr-3" >
                       <a href="Assets/MaxTemperature.html" target="_blank">
-                      <img class="image_margin" src="/assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="Assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/Humidity.html" target="_blank">
-                      <img class="image_margin" src="/assets/Fig2.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="Assets/Fig2.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/Cloudiness.html" target="_blank">
-                      <img class="image_margin" src="/assets/Fig3.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="Assets/Fig3.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/WindSpeed.html" target="_blank">
-                      <img class="image_margin" src="/assets/Fig4.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="Assets/Fig4.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                 </div>
               </div>    
           </div>
