--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 <h1 class="box_style" style="padding-left: 15px; padding-bottom:10px; padding-top: 10px">Visualizations</h1>
                 <div class="thumbnail float-left pr-3" >
                       <a href="Assets/MaxTemperature.html" target="_blank">
-                      <img class="image_margin" src="Assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="/Assets/Fig1.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/Humidity.html" target="_blank">
-                      <img class="image_margin" src="Assets/Fig2.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="/Assets/Fig2.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/Cloudiness.html" target="_blank">
-                      <img class="image_margin" src="Assets/Fig3.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="/Assets/Fig3.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                       <a href="Assets/WindSpeed.html" target="_blank">
-                      <img class="image_margin" src="Assets/Fig4.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
+                      <img class="image_margin" src="/Assets/Fig4.png" class="pull-left img-rounded img-responsive" alt="Latitude vs Temperature" width="200px"></a>
                 </div>
               </div>    
           </div>
